--- a/style.css
+++ b/style.css
@@ -1,220 +1,734 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  line-height: 1.5;
+@import "https://static.fontawesome.com/css/fontawesome-app.css";
+
+*{
+  box-sizing: border-box;
+}
+body{
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
-  background-color: #f4f4f4;
+ 
 }
 
-/* Global */
-.container {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
+#nav-bar{
+  position: relative;
+  top: 0;
+  z-index: 10;
+  width: 100%;
 }
-
-ul {
-  margin: 0;
+.navbar-brand img{  /*----logo----*/
+  height: 50px;
+  padding-left: 30px;
+  margin-top: 10px;
+  width: 1000px;
+}
+.navbar-nav li {   /*-----ul li----*/
   padding: 0;
+}
+.navbar-nav li a{ /*----ul ll a-----*/
+  margin-top: 10px;
+  float: right;
+
+}
+
+#navbarNav {
+
+  justify-content: flex-end; 
+}
+
+#nav-bar ul li a:hover{
+color: #007bff!important;
+}
+.navbar{
+  background: rgb(178, 178, 178);
+}
+.navbar-toggler{
+  border: none!important;
+}
+.nav-link{
+  color: #555!important;
+  font-weight: 600;
+  font-size: 16px;
+  
+}
+.search-form{
+  margin-top: 20px;
+  float: left;
+  margin-right: 100px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+  margin-left: 100px;
+  border-radius: 5px 5px 5px 5px;
+  min-width: 35%;
+}
+#nav-bar input[type=text]{
+  padding: 7px;
+  border: none;
+  font-size: 14px;
+  float: left;
+  opacity: 0.3;
+  min-width: 80%;
+}
+#nav-bar button{
+  float: right;
+  background: orange;
+  color: white;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  position: relative;
+  padding: 7px;
+  border: none;
+  font-size: 16px;
+  min-width: 15%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* Register */ 
+
+#form-container {
+  display: flex;
+
+  background-color: #454545;
+  height: 100%;
+}
+
+
+#register{
+  
+  padding: 30px;
+  background-color: inherit;
+  float: left;
+  width: 65%;
+  height: inherit;
+  border-right: 3px solid #e8491d;
   
 }
 
-.button1 {
-  height: 38px;
-  background: #e8491d;
-  border: none;
-  padding: 0 20px 0 20px;
-  color: white;
+#register  .fas{
+  position: absolute;
+  right: 46%;
+  visibility: hidden;
 }
 
-.dark {
-  padding: 15px;
-  background: #35424a;
-  color: white;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-/* Header */
-header {
-  background-color: #35424a;
-  color: white;
-  padding-top: 30px;
-  min-height: 70px;
-  border-bottom: #e8491d 3px solid;
-}
-
-header a {
-  color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 16px;
+#register .far {
+  position: absolute;
+  right: 49%;
+  visibility: hidden;
 }
 
 
 
-header li {
-  float: left;
-  display: inline;
-  padding: 0 20px 0 20px;
+.dd1 {
+   top: 253px;
 }
 
-header #branding {
-  float: left;
-
+.dd2 {
+  top: 381px;
 }
 
-header #branding h1 {
-  margin: 0;
+.dd3 {
+  top: 510px;
 }
 
-header nav {
-  float: right;
-  margin-top: 10px;
+.dd4 {
+  top: 637px;
 }
 
-header .highlight, header .current a {
+.dd5, .ddd1 {
+  top: 768px;
+}
+
+.dd6, .ddd2 {
+  top: 903px;
+}
+
+#register .not-seen .fa-eye-slash {
+  visibility: visible;
+}
+
+#register .seen .fa-eye {
+  visibility: visible;
+}
+
+#register .success .fa-check-circle{
+  color: #2ecc71;
+  visibility: visible;
+}
+
+#register .error .fa-exclamation-circle{
+  color: #e74c3c;
+  visibility: visible;
+}
+
+small{
+  visibility: hidden;
+}
+
+#register .error small {
+  color: #e74c3c;
+  visibility: visible;
+}
+
+#register div, aside div {
+  margin-bottom: 20px;
+}
+
+#register h2 {
+  margin-top: 30px;
+  text-align: center;
   color: #e8491d;
-  font-weight: bold;
+  
 }
 
-header a:hover {
-  color: #cccccc;
-  font-weight: bold;
-}
-
-
-/* Showcase */
-#showcase {
-  min-height: 400px;
-  background: url("./background-image.jpg") no-repeat;  /* from http://7-themes.com/ */
-  text-align: center;
+#register label, aside label {
   color: white;
-}
-
-#showcase h1 {
-  margin-top: 100px;
-  font-size: 55px;
-  margin-bottom: 10px;
-}
-
-#showcase p {
+  font-weight: bold;
   font-size: 20px;
+  display: inline-block;
+  margin-bottom: 5px;
+ 
 }
 
-/* Newsletter */
-
-#newsletter {
-  padding: 15px;
-  color: white;
-  background: #35424a;
-}
-
-#newsletter h1 {
-  float: left;
-}
-
-#newsletter form {
-  float: right;
-  margin-top: 15px;
-}
-
-#newsletter [type="email"] {
-  padding: 4px;
-  height: 25px;
-  width: 250px;
-}
-
-/* Boxes */
-
-#boxes {
-  margin-top: 20px;
-}
-
-#boxes .box {
-  float: left;
-  width: 30%;
+#register input, aside input {
+  margin-top: 5px;
+  display: block;
+  width: 90%;
+  
   padding: 10px;
-  text-align: center;
+  border-radius: 6px;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
-#boxes img {
-  width: 90px;
-  height: 100px;
+#register .success input{
+  border-color: #2ecc71;
 }
 
-/* Sidebar for about page*/
+#register .error input{
+  border-color: #e74c3c;
+}
+
+#register input:focus, aside input:focus {
+  outline: #e8491d;
+  border: 2px solid #231993;
+}
+
+#register input::placeholder {
+  color: #e8491d;
+  opacity: 0.5;
+  font-family: inherit;
+}
+
+#register button {
+  
+  width: 20%;
+  padding: 10px;
+  margin: 30px 0 0 30% ;
+  background-color: #e8491d;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+}
+
+#register button:focus {
+  outline: none;
+}
+
+#cons {
+  margin-top: initial;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*Login*/
+
 aside {
   float: right;
   width: 30%;
-  margin-top: 10px;
-
-}
-
-aside .quote input, aside .quote textarea {
-  width: 90%;
-  padding: 5px;
-}
-
-/* main for about page*/
-article {
-  float: left;
-  width: 65%;
-}
-
-/* Services */
-
-#services  li {
-  list-style: none;
   padding: 20px;
-  border: #cccccc solid 1px;
-  margin-bottom: 5px;
-  background: #e6e6e6;
+  
 }
 
-/* Footer */
-
-footer {
-  margin-top: 20px;
-  padding: 20px;
-  color: white;
-  background: #e8491d;
+aside h2 {
+  margin-top: 40px;
   text-align: center;
+  color: #e8491d;
+  
 }
 
-/* Media queries*/
-@media(max-width: 765px){  /* Tablet screens */
-  header #branding, 
-  header nav li,
-  #newsletter h1,
-  #newsletter form,
-  #boxes .box,
-  article,
-  aside {
-    float: none;
-    text-align: center;
-    width: 100%;
+aside .fas{
+  position: absolute;
+  right: 11%;
+  visibility: hidden;
+}
+
+aside .far {
+  position: absolute;
+  right: 14%;
+  visibility: hidden;
+}
+
+.dd7 {
+  top: 251px;
+}
+
+.dd8, .ddd3 {
+  top: 380px;
+}
+
+aside .success input{
+  border-color: #2ecc71;
+}
+
+aside .error input{
+  border-color: #e74c3c;
+}
+
+aside .not-seen .fa-eye-slash {
+  visibility: visible;
+}
+
+aside .seen .fa-eye {
+  visibility: visible;
+}
+
+aside .success .fa-check-circle{
+  color: #2ecc71;
+  visibility: visible;
+}
+
+aside .error .fa-exclamation-circle{
+  color: #e74c3c;
+  visibility: visible;
+}
+
+aside .error small{
+  color: #e74c3c;
+  visibility: visible;
+}
+
+.checkbox {
+  display: flex;
  
+  padding: 0;
+}
 
+.checkbox .ss {
+
+  margin: 0 10px 0 2px; 
+}
+
+.checkbox .ss input {
+  height: 17px;
+  width: 17px;
+}
+
+.checkbox label {
+  float: right;
+}
+
+
+
+aside button{
+  background-color: #e8491d;
+  color: white;
+  
+
+  padding: 10px;
+  border: none;
+}
+
+aside button:focus {
+  outline: none;
+}
+
+aside .vv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+aside a {
+  text-decoration: none;
+  color: white;
+
+}
+
+
+
+
+
+
+
+
+/*------footer-----*/
+.footer{
+    background: #000;
+    color: #8a8a8a;
+    font-size: 14px;
+    padding: 60px 0 20px;
+    min-height: 200px;
+}
+.footer p{
+    color: #8a8a8a;
+}
+.footer h3{
+    color: #fff;
+    margin-bottom: 20px;
+}
+.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
+    min-width: 250px;
+    margin-bottom: 20px;
+}
+.footer-col-1{
+    flex-basis: 30%;
+}
+.footer-col-2{
+    flex: 1;
+    text-align: center;
+}
+.footer-col-2 img{
+    width: 180px;
+    margin-bottom: 20px;
+}
+.footer-col-3{
+    flex-basis: 12%;
+    text-align: center;
+    position: relative;
+    top: 35px;
+}
+.footer-col-4{
+    flex-basis: 12%;
+    text-align: center;
+    position: relative;
+    top: 25px;
+}
+ul{
+    list-style-type: none;
+}
+.app-logo{
+    margin-top: 20px;
+}
+.app-logo img{
+    width: 250px;
+}
+.footer hr{
+    border: none;
+    background: #b5b5b5;
+    height: 1px;
+    margin: 20px 0;
+}
+.copyright{
+    text-align: center;
+}
+.fa-facebook-official{
+    margin: 5px;
+    color: #fff;
+}
+.fa-twitter-square{
+    margin: 5px;
+    color: #fff; 
+}
+.fa-instagram{
+    margin: 5px;
+    color: #fff;
+}
+.footersm{
+    text-align: center;
+}
+.footer ul{
+    display: inline-block;
+    list-style: none;
+    position: relative;
+    top: 5px;
+}
+.footer ul li{
+    margin-bottom: 5px;
+}
+.footer ul li a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 50;
+}
+.footer ul li a:hover{
+    color: #555;
+}
+
+
+
+/* Media Queries For Smaller Screens */
+
+@media (max-width: 991px) {
+
+  .navbar-brand img{  /*----logo----*/
+    padding: 0;
+    margin: 0;
+    width: 170px;
+  }
+  #nav-bar {
+    height: 90px;
   }
 
-  header {
-    padding-bottom: 20px;
+  .dd2 {
+    top: 375px;
+  }
+  
+  .dd3 {
+    top: 495px;
+  }
+  
+  .dd4 {
+    top: 616px;
   }
 
-  #showcase h1 {
-    margin-top: 40px;
+  .dd5, .ddd1 {
+    top: 736px;
+  }
+  
+  .dd6, .ddd2 {
+    top: 862px;
   }
 
-  #newsletter button, .quote button {
+  .dd8, .ddd3 {
+    top: 370px;
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+  }
+  .search-form{
+    float: none;
+    margin-right: 0;
+    margin-left: 0;
+    min-width: 26%;
+  }
+  #nav-bar input[type=text]{
+    padding: 7px;
+    border: none;
+    font-size: 14px;
+    min-width: 20%;
+  }
+
+  .notice {
+    font-size: 10px;
+  }
+
+  #register input, aside input {
+    font-size: 15px;
+    
+  }
+  
+}
+
+
+@media (max-width: 705px) {
+  /* Register */
+  #form-container {
     display: block;
+  }
+
+  #register {
+    padding: 20px;
+    height: inherit;
+    float: none;
     width: 100%;
+    border: none;
+  }
+
+  #register h2 {
+    margin-top: 50px;
+    font-size: 21px;
     
   }
 
-  #newsletter form input, .quote input, .quote textarea {
-    width: 100%;
-    margin-bottom: 5px;
+  #register  .fas, aside .fas{
+    right: 7%;
+    font-size: 15px;
   }
+  
+  #register .far,  aside .far { 
+    right: 13%;
+    font-size: 15px;
+  }
+
+  .dd1 {
+    top: 242px;
+ }
+
+  .dd2 {
+    top: 356px;
+  }
+  
+  .dd3 {
+    top: 470px;
+  }
+  
+  .dd4 {
+    top: 585px;
+  }
+  
+  .dd5, .ddd1 {
+    top: 700px;
+  }
+  
+  .dd6, .ddd2 {
+    top: 820px;
+  }
+
+  #register input, aside input {
+   width: 100%; 
+   font-size: 14px;
+  }
+
+  #register label, aside label {
+    font-weight: 400;
+    font-size: 16px;   
+  }
+
+  #register button {
+    width: 100%;
+    padding: 6px;
+    margin: 0;
+    font-size: 17px;
+  }
+
+
+
+
+  /* LOGIN */
+
+  aside {
+    float: none;
+    width: 100%;
+    padding: 20px;
+    height: inherit;
+  }
+
+  aside h2 {
+    margin-top: 40px;
+    font-size: 21px;
+    
+  }
+
+  .dd7 {
+    top: 1092px;
+  }
+  
+  .dd8, .ddd3 {
+    top: 1205px;
+  }
+
+  
+  .checkbox .ss {
+    margin: 4px 5px 0 2px; 
+  }
+  
+  .checkbox .ss input {
+    height: 14px;
+  }
+  
+  .checkbox label {
+    margin-top: 5px;
+  }
+
+  aside button{
+    width: 100%;
+    margin: 0;
+    padding: 6px;
+    font-size: 17px;
+    margin-bottom: 9px;
+    font-weight: bold;
+  }
+
+  aside .vv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  aside a {
+    font-size: 15px;
+    margin: 0;
+  }
+}
+
+
+
+
+
+@media (max-width: 598px) {
+  .dd7 {
+    top: 1109px;
+  }
+  
+  .dd8, .ddd3 {
+    top: 1220px;
+  }
+}
+
+
+@media (max-width: 522px){
+  nav {
+    flex-direction: column;
+    
+  }
+
+  .navbar-brand img{  /*----logo----*/
+    height: 40px;
+  }
+
+  .search-form{
+    width: 70%;
+    height: 26px;
+  }
+  #nav-bar input[type=text]{
+
+    width: 70%;
+    height: 26px;
+  }
+
+  #nav-bar button{
+    font-size: 10px;
+    min-width: 20%;
+    height: 26px;
+  
+  }
+
+  .navbar-toggler {
+   float: left;
+
+  }
+
+  .dd7 {
+    top: 1090px;
+  }
+  
+  .dd8, .ddd3 {
+    top: 1202px;
+  }
+
 }
